# src/services/wgserver/index.ts
@@ -1,3 +1,4 @@
+export * from "./wgserver.controller";
 export * from "./wgserver.model";
 export * from "./wgserver.module";
 export * from "./wgserver.service";
